cp project/force-app/main/default/objects/Refund__c/Refund__c.object-meta.xml
<CustomObject>
    <description>Refunds processed by Finance user for cancellations and credit notes - Slide 38.</description>
    <label>Refund</label>
    <nameField>
        <displayFormat>REF-{0000}</displayFormat>
        <label>Refund Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>