cp project/force-app/main/default/objects/Refund__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>