cp project/force-app/main/default/objects/Refund__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation</label>
    <referenceTo>Cancellation__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>