cp project/force-app/main/default/objects/Refund__c/fields/Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Approval</label>
    <type>Checkbox</type>
</CustomField>