cp project/force-app/main/default/objects/Refund__c/fields/Refund_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Number__c</fullName>
    <label>Refund Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>