cp project/force-app/main/default/objects/Refund__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Pending Finance</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Pending Finance Processing</fullName>
                <isActive>false</isActive>
                <label>Pending Finance Processing</label>
            </value>
            <value>
                <fullName>Processed &amp; Disbursed</fullName>
                <isActive>false</isActive>
                <label>Processed &amp; Disbursed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>