cp project/force-app/main/default/objects/Refund__c/validationRules/Refund_Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Refund Amount must be greater than zero.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Amount__c)), Amount__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Refund Amount must be greater than zero.</errorMessage>
</ValidationRule>